remove Version endpoint + validation in favour of just allowing selection from Mojang API versions
