# src/main/scala/gg/uhc/hosts/endpoints/EndpointsModule.scala
@@ -17,7 +17,6 @@ import gg.uhc.hosts.endpoints.rules.{GetLatestRules, RulesRoute, SetRules}
 import gg.uhc.hosts.endpoints.sync.{GetTime, SyncRoute}
 import gg.uhc.hosts.endpoints.ubl._
 import gg.uhc.hosts.endpoints.users.{ShowPermissionsForUser, UsersRoute}
-import gg.uhc.hosts.endpoints.versions.{ListPrimaryVersions, VersionsRoute}
 import gg.uhc.hosts.endpoints.matches.websocket.MatchesWebsocket
 import gg.uhc.hosts.reddit.RedditModule
 
@@ -62,7 +61,6 @@ trait EndpointsModule extends RedditModule {
   lazy val listModifiers: ListModifiers         = wire[ListModifiers]
   lazy val createModifier: CreateModifier       = wire[CreateModifier]
   lazy val deleteModifier: DeleteModifier       = wire[DeleteModifier]
-  lazy val listPrimaryVersions: ListPrimaryVersions = wire[ListPrimaryVersions]
 
   lazy val basicCache: BasicCache                   = wire[BasicCache]
   lazy val assetsRoute: AssetsRoute                 = wire[AssetsRoute]
@@ -80,7 +78,6 @@ trait EndpointsModule extends RedditModule {
   lazy val alertsRoute: AlertsRoute                 = wire[AlertsRoute]
   lazy val usersRoute: UsersRoute                   = wire[UsersRoute]
   lazy val modifiersRoute: ModifiersRoute           = wire[ModifiersRoute]
-  lazy val versionsRoute: VersionsRoute             = wire[VersionsRoute]
   lazy val matchesWebsocket: MatchesWebsocket       = wire[MatchesWebsocket]
 
   lazy val baseRoute: BaseRoute                     = wire[BaseRoute]
